Bug 1328633 - Only call LayerTransactionChild::Destroy on the main thread. bug 1328633, r=mattwoodrow a=gchang

--HG--
extra : source : 843e450763b6f8618579edd6d7ec0ede4bb6a823